--- a/desafios/desafio-014/estilos/style.css
+++ b/desafios/desafio-014/estilos/style.css
@@ -2,34 +2,62 @@
 *{
     margin: 0px;
     padding: 0px;
-    background-attachment: fixed;
 }
 
 html, body{
-    position: relative;
-    background-image: url('imagens/fundo-madeira.jpg');
-    width: 98vw;
-    height: 96vh;
-    background-attachment: fixed;
+    margin: auto;
+    background-color: black;
+    width: 100vw;
+    height: 100vh;
     
     
 }
 
+body{
+    background: url(imagens/fundo-madeira.jpg) no-repeat ;
+    background-attachment: fixed;
+    background-size: cover;
+}
 main {
     height: 100vh;
     position: relative;
     
 }
 
-#telefone{
+section#telefone{
+    background-image: url('imagens/frame-iphone.png');
     position: absolute;
     top: 50%;
     left: 50%;
     height: 627px;
     width: 311px;
     transform: translate(-50%, -50%);
-    background: url('imagens/frame-iphone.png') no-repeat;
     
+}
 
-    
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 265px;
+    height: 471px;
+}
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    box-shadow: 2px 2px 10px black;
+    vertical-align: right;
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover{
+    border: 2px solid white;
+    transition: .3s;
+}
+::-webkit-scrollbar{
+    height: 0px;
+    width: 0px;
 }
