--- a/desafios/desafio-016/estilos/media-queries.css
+++ b/desafios/desafio-016/estilos/media-queries.css
@@ -1,33 +1,63 @@
-/* Todas as mídias e breakpoits aqui... */
+@charset "UTF-8";
 
-/* Quando a largura da tela está entre 768px e 992px */
-@media screen and (min-width: 768px) and (max-width: 992px) {
+/* Typical Device Breakpoints
+------------------------------
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+*/
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /* CONFIGURAÇÃO PARA TABLET */
+    body {
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    }
+
     section#login {
         width: 80vw;
+        height: 280px;
     }
-    section#login > div#img {
+
+    section#login > div#imagem {
         float: left;
         width: 30%;
         height: 100%;
     }
-    section#login > div#form {
-        float: left;
+
+    section#login > div#formulario {
+        float: right;
         width: 70%;
     }
 }
 
-/* Quando a largura da tela é igual ou maior que 992px */
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /* CONFIGURAÇÕES PARA DESKTOP */
+    body {
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    }
+
     section#login {
         width: 950px;
+        height: 350px;
     }
-    section#login > div#img {
-        float: left; /* Adicionado 'float: left;' para alinhar à esquerda */
+
+    section#login > div#imagem {
+        float: right;
         width: 50%;
         height: 100%;
     }
-    section#login > div#form {
-        float: left; /* Alterado de 'float: right' para 'float: left' para alinhar à esquerda */
+
+    section#login > div#formulario {
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
