--- a/projetos/maior-brasil/styles.css
+++ b/projetos/maior-brasil/styles.css
@@ -20,7 +20,8 @@ h1#h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
     margin-top: 20px;
 }
 
@@ -37,7 +38,9 @@ button {
 }
 
 #btn1 {
+    width: 115px;
     background-color: red;
+    white-space: nowrap;
 }
 
 #btn2 {
