--- a/projetos/maior-brasil-c/styles.css
+++ b/projetos/maior-brasil-c/styles.css
@@ -7,8 +7,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: rgb(255, 64, 38);
-    background: linear-gradient(102deg, rgba(255, 64, 38, 0.9268499636182598) 48%, rgba(0, 0, 0, 1) 50%, rgba(29, 149, 39, 1) 52%);
+    background: rgb(255,0,0);
+    background: linear-gradient(102deg, rgba(255,0,0,1) 48%, rgba(0,0,0,1) 52%);
 }
 
 h1#h1 {
@@ -20,7 +20,8 @@ h1#h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
+    width: 70vw;
     margin-top: 20px;
 }
 
@@ -37,14 +38,16 @@ button {
 }
 
 #btn1 {
-    background-color: red;
+    width: 115px;
+    background-color: rgb(255, 64, 64);
+    white-space: nowrap;
 }
 
 #btn2 {
-    background-color: green;
+    background-color: white;
 }
 
 a {
     text-decoration: none;
-    color: azure;
+    color: black;
 }
