--- a/jogo001/assets/style.css
+++ b/jogo001/assets/style.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar-thumb{
 }
 header{
    font-family: 'Arial Narrow', Arial, sans-serif; 
-   padding: 10px;
+   padding: 1px;
 }
 i#dark_mode{
   font-size: 25px;
@@ -68,11 +68,14 @@ nav ul{
   background-image: linear-gradient(to right, gray, var(--preto));
 }
 .link_li{
-  padding: 25px;
+  padding: 15px;
   color: var(--branco);
   padding-right: 5px;
   text-decoration: none;
   transition-duration: 1.5s;
+}
+a#home{
+  padding-left: 25px;
 }
 .link_li:hover{
   color: var(--branco);
