--- a/projetos/e-commerce-store/style.css
+++ b/projetos/e-commerce-store/style.css
@@ -2,27 +2,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
 body{
     font-family: 'Roboto', sans-serif;
-    margin: 0;
+    margin: 0 0 0 15px;
     padding: 0;
+    background-color: whitesmoke;
 }
 header{
     background-color: #333;
-    color: white;
+    color: #fff;
     text-align: center;
     padding: 1rem 0;
+    border-radius: 5px;
+    margin: 0 0 0 -15px;
 }
 main{
     padding: 2rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
-#produtos-sem-kit{
+#produtos-sem-kit, #kit-espiral, #kit-hexagono, #kit-cristal, #kit-square, #kit-jack, #kit-harley, #kit-paris, #kit-paris-2{
     display: flex;
     align-items: center;
     gap: 20px;
+    width: 150px;
+}
+section#produtos-sem-kit{
+    width: 400px;
+    overflow-y: auto;
+}
+section#kit-jack{
+    width: 400px;
+    overflow-y: auto;
+}
+
+section#kit-harley{
+    width: 400px;
+    overflow-y: auto;
 }
 .product{
-    border: 1px solid #ddd;
+    background-color: #fff;
+    border: 1.5px solid #ddd;
     padding: 1rem;
     box-sizing: border-box;
 }
@@ -33,4 +52,65 @@ div#products h2{
 img{
     border-radius: 7px;
     width: 150px;
+}
+button{
+    border: none;
+    background-color: red;
+    color: #fff;
+    margin: 2px;
+    border-radius: 5px;
+    width: 150px;
+    text-align: center;
+    padding: 3px;
+}
+button:hover{
+    color: red;
+    background-color: #fff;
+    border: 1.5px solid red;
+    cursor: pointer;
+}
+section#cart{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 115px;
+    right: 15px;
+    cursor: pointer;
+    font-size: 30px;
+    background-color: #fff;
+    border-radius: 50%;
+    width: 50px;
+    z-index: 999;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    height: 50px;
+}
+section#cart:hover{
+    transform: scale(1.1);
+}
+div#cart-count{
+    position: absolute;
+    top: 60%;
+    left: 0.5%;
+    transform: translate(-10%, -10%);
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 15px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+}
+div#cart-menu{
+    display: none;
+    position: absolute;
+    top: 150px;
+    right: 80px;
+    width: 150px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 999;
 }
