--- a/projetos/e-commerce-store/style.css
+++ b/projetos/e-commerce-store/style.css
@@ -10,7 +10,7 @@ header{
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 1rem 0;
+    padding: 2rem 0;
     border-radius: 5px;
     margin: 0 0 0 -15px;
 }
@@ -74,7 +74,7 @@ section#cart{
     align-items: center;
     justify-content: center;
     position: fixed;
-    top: 115px;
+    top: 145px;
     right: 15px;
     cursor: pointer;
     font-size: 30px;
@@ -103,14 +103,24 @@ div#cart-count{
     text-align: center;
 }
 div#cart-menu{
+    text-align: right;
     display: none;
     position: absolute;
     top: 150px;
     right: 80px;
-    width: 150px;
+    width: 350px;
     background-color: #fff;
     border: 1px solid #ddd;
-    padding: 10px;
+    padding: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 999;
+    
+}
+div#cart-menu img{
+    border-radius: 0;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 70px;
+    height: 70px;
 }
