--- a/projetos/e-commerce-store/home/assets/home.css
+++ b/projetos/e-commerce-store/home/assets/home.css
@@ -1,1 +1,60 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Roboto+Condensed&family=Roboto+Mono:ital,wght@1,600&display=swap');
+body{
+    font-family: 'Roboto Condensed', sans-serif;
+    margin: 0 0 0 15px;
+    padding: 0;
+    background-color: whitesmoke;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar{
+    display: none;
+}
+header{
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border-radius: 5px;
+    margin: -10px 0px 0px -20px;
+    padding-bottom: 50px;
+}
+h1{
+    margin-top: 60px;
+}
+img#logo{
+    position: absolute;
+    right: 92%;
+    margin: 10px;
+    margin-top: 15px;
+    width: 78px;
+    border-radius: 0;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 8px;
+    cursor: pointer;
+}
+img#logo:hover{
+    border: 1.5px solid #fff;
+    transition: 0.5s;
+}
+nav{
+    position: absolute;
+    top: 120px;
+    left: 15px;
+}
+nav a{   
+    font-family: 'Lato' monospace;
+    background-color: #ddd;
+    padding: 5px 15px 5px 15px;
+    border-radius: 5px;
+    margin-right: 5px;
+    color: black;
+    text-decoration: none;
+}
+nav a:hover{
+    margin: 5px;
+    background-color: aliceblue;
+    transition: 1.5s;
+}
