--- a/projetos/e-commerce-store/produtos/assets/style.css
+++ b/projetos/e-commerce-store/produtos/assets/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Roboto+Condensed&family=Roboto+Mono:ital,wght@1,600&display=swap');
 body{
+    box-sizing: border-box;
     font-family: 'Roboto Condensed', sans-serif;
     margin: 0 0 0 15px;
     padding: 0;
@@ -223,4 +224,34 @@ div#overlay{
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
+}
+form{
+    border-radius: 10px;
+    padding: 0 15px 0 15px;
+    display: none;
+    background-color: #fff;
+    width: 30vw;
+    height: 85%;
+}
+form h1{
+    margin-top: 20px;
+}
+input{
+    border: none;
+    border-bottom: 1px solid black;
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 7px;
+}
+input#enviar{
+    border: none;
+    padding: 10px;
+    background-color: red;
+    color: #fff;
+    width: 260px;
+}
+input#enviar:hover{
+    cursor: pointer;
 }
