--- a/projetos/e-commerce-store/produtos/assets/style.css
+++ b/projetos/e-commerce-store/produtos/assets/style.css
@@ -215,16 +215,6 @@ footer{
     background-color: #ddd;
     font-size: large;
 }
-div#overlay{
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-}
 form{
     border-radius: 10px;
     padding: 0 15px 0 15px;
@@ -245,13 +235,13 @@ input{
     align-items: center;
     margin: 7px;
 }
-input#enviar{
+.enviar{
     border: none;
     padding: 10px;
     background-color: red;
     color: #fff;
     width: 260px;
 }
-input#enviar:hover{
+.enviar:hover{
     cursor: pointer;
 }
